crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_agent_auth_denied.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 1011
expression: "snapshot_event(\"agent-auth-denied\", \"denied\")"
---
time      service  resource      outcome    agent         event            
15:02:14  gmail    messages/123  ▲ blocked  email-triage  agent-auth-denied
