crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_api_call_scrubbed.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 986
expression: "snapshot_event(\"api-call\", \"scrubbed\")"
---
time      service  resource      outcome    agent         event   
15:02:14  gmail    messages/123  ▲ blocked  email-triage  api-call
