crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_approval_denied.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 1041
expression: "snapshot_event(\"approval-denied\", \"denied\")"
---
time      service  resource      outcome    agent         event          
15:02:14  gmail    messages/123  ▲ blocked  email-triage  approval-denied
