crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_approval_granted_ok.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 1036
expression: "snapshot_event(\"approval-granted\", \"ok\")"
---
time      service  resource      outcome  agent         event           
15:02:14  gmail    messages/123  ● ok     email-triage  approval-granted
