crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_kill_activated_already_active.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 1021
expression: "snapshot_event(\"kill-activated\", \"already-active\")"
---
time      service  resource      outcome  agent         event         
15:02:14  gmail    messages/123  ● ok     email-triage  kill-activated
